@@ -1,3 +1,8 @@
+2011-08-16  Peter Schueller  <ps@kr.tuwien.ac.at>
+
+	* src/dlvhex/GuessAndCheckModelGenerator.cpp: Fixed TODO in G&C Model Generator.
+	* src/dlvhex/State.cpp: Made warning message more precise.
+
 2011-08-01  Peter Schueller  <ps@kr.tuwien.ac.at>
 
 	* src/dlvhex/HigherOrderPlugin.cpp: Implemented Higher Order Plugin.
